site's skeleton works locally; moving to heroku once I get the account back

--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -1,7 +1,7 @@
 <div id="header">
     <div id="title">
-        <h1>Jordan Colburn</h1>
-        <h2>Video Game Artist</h2>
+        <h1>Ehtashuan Nazar</h1>
+        <h2>job title goes here</h2>
     </div>
     <div id="nav">
         {{>_nav}}
