--- a/style.css
+++ b/style.css
@@ -4,5 +4,6 @@ body{
 
 button{
     border: 2px solid black;
-    border-radius: 15px roudned;
+    border-radius: 15px;
+    border-radius: round;
 }
